# aimote

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
.github/workflows/: android.yml  ci.yml  setup-branch-protection.yml
apps/desktop-tauri/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop-tauri/e2e/fixtures/: app.fixture.ts
apps/desktop-tauri/e2e/mocks/: tauri-api-mock.ts
apps/desktop-tauri/e2e/tests/: config-validation.spec.ts  connection.spec.ts  message-flow.spec.ts  permission-dialog.spec.ts  plan-panel.spec.ts  session.spec.ts  thought-bubble.spec.ts  tool-calls.spec.ts  usage-bar.spec.ts
apps/desktop-tauri/src/: App.tsx  index.css  main.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tauri_event_sink.rs
apps/desktop-unity/: README.md
apps/pc-relay/: README.md  package.json
apps/pc-relay/src/: server.ts
crates/aimote-backend/: Cargo.toml
crates/aimote-backend/src/: acp_client_handler.rs  acp_transport.rs  agent_config_file.rs  agent_registry.rs  config_validator.rs  event_sink.rs  lib.rs  permission_resolver.rs  process_manager.rs  session_update_mapper.rs  transport_handle.rs  types.rs  ws_protocol.rs  ws_server.rs
crates/pc-relay/: Cargo.toml
crates/pc-relay/src/: main.rs
scripts/: local-android-build.sh  local-ci.sh  setup-android.sh
unity-packages/com.acme.aimote-ui/: package.json
unity-packages/com.acme.aimote-ui/Editor/: AimoteChatWindow.cs  com.acme.aimote-ui.editor.asmdef
unity-packages/com.acme.aimote-ui/Runtime/Resources/react/: index.js  index.js.map
