[workspace]
members = [
    "apps/desktop-tauri/src-tauri",
    "crates/aimote-backend",
    "crates/pc-relay",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
