[package]
name = "pc-relay"
version = "0.0.1"
edition = "2021"

[dependencies]
aimote-backend = { path = "../aimote-backend" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
