[package]
name = "aimote"
version = "0.0.1"
description = "aimote desktop app"
authors = []
edition = "2021"

[lib]
name = "aimote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aimote-backend = { path = "../../../crates/aimote-backend" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
